force-app/main/default/objects/General_Notes__c/General_Notes__c.object-meta.xml
<CustomObject>
    <label>General Notes</label>
    <nameField>
        <label>General Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>