force-app/main/default/objects/General_Notes__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>General Notes</relationshipLabel>
    <relationshipName>General_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>