force-app/main/default/objects/General_Notes__c/fields/Beneficiary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>General Notes</relationshipLabel>
    <relationshipName>General_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>