force-app/main/default/objects/General_Notes__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>General_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>