force-app/main/default/objects/General_Notes__c/fields/Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Contact__c</fullName>
    <label>Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>