force-app/main/default/objects/General_Notes__c/fields/Service_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Service_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Make sure to enter when creating a Case Note</inlineHelpText>
    <label>Service Enrollment</label>
    <referenceTo>Service_Enrollment__c</referenceTo>
    <relationshipLabel>Case Notes</relationshipLabel>
    <relationshipName>General_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>