force-app/main/default/objects/General_Notes__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will auto populate from Service Enrollment</inlineHelpText>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>General Notes</relationshipLabel>
    <relationshipName>General_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>