force-app/main/default/objects/General_Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary_Contact__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Date__c</columns>
    <columns>Note__c</columns>
    <columns>Trust__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>